LPD-18647 Use NewEnv CLDR to make the test use the CLDR property and expose the issue (this should be removed after the portal is using CLDR globally