@@ -7,6 +7,7 @@ package com.liferay.portal.kernel.util;
 
 import com.liferay.portal.kernel.language.Language;
 import com.liferay.portal.kernel.language.LanguageUtil;
+import com.liferay.portal.kernel.test.rule.NewEnv;
 import com.liferay.portal.test.log.LogCapture;
 import com.liferay.portal.test.log.LogEntry;
 import com.liferay.portal.test.log.LoggerTestUtil;
@@ -25,6 +26,8 @@ import org.mockito.Mockito;
 /**
  * @author Wesley Gong
  */
+@NewEnv(type = NewEnv.Type.JVM)
+@NewEnv.JVMArgsLine("-Djava.locale.providers=CLDR")
 public class LocaleUtilTest {
 
 	@Test
